updated to add GitHub icon

--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
     <!-- LinkedIn Icon --> 
     <a class="nav-link" href="https://linkedin.com/in/tim-gabaree" target="_blank"> <img src="media/social_media_linkedin_icon.png" width="25" height="25" alt="LinkedIn Icon" /> </a> 
     <!-- X.com Icon --> 
-    <a class="nav-link" href="https://x.com/timgabaree/" target="_blank"> <img src="https://timgabaree.com/media/logo-black.png" width="25" height="24" alt="X.com" /> </a> 
-    <!-- BlueSky Icon --> 
-    <a class="nav-link" href="https://bsky.app/profile/timgabaree.bsky.social" target="_blank"> <img src="https://timgabaree.com/media/Bluesky_Logo.png" width="25" height="25" alt="BlueSky" /> </a> </div>
+    <a class="nav-link" href="https://x.com/timgabaree/" target="_blank"> <img src="https://timgabaree.com/media/logo-black.png" width="25" height="24" alt="X.com Icon" /> </a>
+	<!-- BlueSky Icon --> 
+    <a class="nav-link" href="https://bsky.app/profile/timgabaree.bsky.social" target="_blank"> <img src="https://timgabaree.com/media/Bluesky_Logo.png" width="25" height="25" alt="BlueSky Icon" /> </a> 
+	<!-- GitHub Icon --> 
+    <a class="nav-link" href="https://github.com/timgabaree" target="_blank"> <img src="https://timgabaree.com/media/github-mark.png" width="25" height="25" alt="GitHub Icon" /> </a> </div>
 </nav>
 <!-- Intro Section -->
 <div id="home" class="section-wrapper">
