--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
       <!-- Contact Content -->
       <div class="contactClass"> 
         <!-- QR Code Block -->
-        <div class="qrCodeBlock"> <a href="https://timgabaree.com/timgabaree.vcf" target="_blank"> <img src="media/timgabaree-vcf-qr-code.png" alt="Tim Gabaree's Contact vCard QR-Code"> </a> </div>
+        <div class="qr-code"> <a href="https://timgabaree.com/timgabaree.vcf" target="_blank"> <img src="media/timgabaree-vcf-qr-code.png" alt="Tim Gabaree's Contact vCard QR-Code"> </a> </div>
         <!-- Contact Info Block -->
         <div class="contactBlock">
           <div class="contactContent"> <span>Tim Gabaree</span><br>
