--- a/index.html
+++ b/index.html
@@ -431,12 +431,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
   <div class="section-wrapper">
     <section id="contact" class="contact-section section-spacing"> 
       <!-- Contact Content -->
-      <div class="contactClass"> 
+      <div class="contact-class"> 
         <!-- QR Code Block -->
-        <div class="qr-code"> <a href="https://timgabaree.com/timgabaree.vcf" target="_blank"> <img src="media/timgabaree-vcf-qr-code.png" alt="Tim Gabaree's Contact vCard QR-Code"> </a> </div>
+        <div class="qr-code-block"> <a href="https://timgabaree.com/timgabaree.vcf" target="_blank"> <img src="media/timgabaree-vcf-qr-code.png" alt="Tim Gabaree's Contact vCard QR-Code"> </a> </div>
         <!-- Contact Info Block -->
-        <div class="contactBlock">
-          <div class="contactContent"> <span>Tim Gabaree</span><br>
+        <div class="contact-block">
+          <div class="contact-content"> <span>Tim Gabaree</span><br>
             <span><a href="tel:7736090697" class="contactLink">773.609.0697</a></span><br>
             <span><a href="mailto:fb8e5434d0e94cc1a7a99e6dccf4e971@domainsbyproxy.com" class="contactLink">tim@timgabaree.com</a></span> </div>
         </div>
