picture behavior updates

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
 <!-- Custom CSS -->
 <link href="css/style.css" rel="stylesheet" type="text/css">
+<script type="text/javascript"> //<![CDATA[ 
+var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.trust-provider.com/" : "http://www.trustlogo.com/");
+document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+//]]>
+</script>
 </head>
 <!-- Page Body -->
 <body>
@@ -125,7 +130,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
       <div class="intro-links-block"> <a href="https://docsend.dropbox.com/view/6dpk6mpq6idzaumj?raw=1" target="_blank" class="intro-links"> <span>RESUME</span> </a> <a href="https://docsend.dropbox.com/view/8pbynximcvwcbwkv?raw=1" target="_blank" class="intro-links"> <span>RESUME</span> <small>(The Bard's Version)</small> </a> <a href="https://docsend.dropbox.com/view/mc5tr9cgmzhh9yf2?raw=1" target="_blank" class="intro-links"> <span>EXECUTIVE BIO</span> </a> </div>
     </div>
     <!-- Intro Profile Picture Block -->
-    <div class="intro-profile-picture-block"> <img class="intro-profile-picture-img" src="media/timgabaree_profile.png" alt="Tim Gabaree"> </div>
+    <div class="intro-profile-picture-block">
+  <img class="intro-profile-picture-img main-img" src="media/timgabaree_profile.png" alt="Tim Gabaree">
+  <img class="intro-profile-picture-img hover-img" src="media/timasthedude3-1.png" alt="Tim Gabaree as The Dude">
+</div>
   </section>
   <!-- End Intro Section --> 
   <!-- Results Section -->
@@ -416,16 +424,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
       <div class="interests-heading-block">
         <h2 class="interests-heading">BEYOND THE OFFICE</h2>
       </div>
-      <div class="interests-content"> 
-        <!-- Coffee Roasting -->
-        <div class="interests-block coffee-roasting"> <span>Coffee Roasting</span> </div>
-        <!-- Chocolatiering -->
-        <div class="interests-block chocolatiering"> <span>Baking &amp; Chocolatiering</span> </div>
-        <!-- Pizza Making -->
-        <div class="interests-block pizza-making"> <span>Pizza Making</span> </div>
+      <div class="interests-content">
+        <div class="interests-block coffee-roasting">
+          <div class="interest-caption">Coffee Roasting</div>
+        </div>
+        <div class="interests-block chocolatiering">
+          <div class="interest-caption">Baking &amp; Chocolatiering</div>
+        </div>
+        <div class="interests-block pizza-making">
+          <div class="interest-caption">Pizza Making</div>
+        </div>
+        <div class="interests-block geeking-out">
+          <div class="interest-caption">Geeking Out on Cognitive Computing &amp; AI</div>
+        </div>
       </div>
     </section>
   </div>
+  
   <!-- End Interests & Hobbies Section --> 
   <!-- Contact Section -->
   <div class="section-wrapper">
@@ -455,5 +470,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
   <script src="js/popper.min.js"></script> 
   <script src="js/bootstrap-4.4.1.js"></script> 
 </div>
+<div style="text-align: center; margin-top: 10px;"> 
+  <script language="JavaScript" type="text/javascript">
+TrustLogo("https://timgabaree.com/media/sectigo_trust_seal_lg_140x54.png", "CL1", "none");
+</script> 
+  <a  href="https://ssl.comodo.com" id="comodoTL">Comodo SSL</a> </div>
 </body>
 </html>
