optimizations for smaller and landscape mobile screens

--- a/index.html
+++ b/index.html
@@ -130,10 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
       <div class="intro-links-block"> <a href="https://docsend.dropbox.com/view/6dpk6mpq6idzaumj?raw=1" target="_blank" class="intro-links"> <span>RESUME</span> </a> <a href="https://docsend.dropbox.com/view/8pbynximcvwcbwkv?raw=1" target="_blank" class="intro-links"> <span>RESUME</span> <small>(The Bard's Version)</small> </a> <a href="https://docsend.dropbox.com/view/mc5tr9cgmzhh9yf2?raw=1" target="_blank" class="intro-links"> <span>EXECUTIVE BIO</span> </a> </div>
     </div>
     <!-- Intro Profile Picture Block -->
-    <div class="intro-profile-picture-block">
-  <img class="intro-profile-picture-img main-img" src="media/timgabaree_profile.png" alt="Tim Gabaree">
-  <img class="intro-profile-picture-img hover-img" src="media/timasthedude3-1.png" alt="Tim Gabaree as The Dude">
-</div>
+    <div class="intro-profile-picture-block"> <img class="intro-profile-picture-img main-img" src="media/timgabaree_profile.png" alt="Tim Gabaree"> <img class="intro-profile-picture-img hover-img" src="media/timasthedude3-1.png" alt="Tim Gabaree as The Dude"> </div>
   </section>
   <!-- End Intro Section --> 
   <!-- Results Section -->
@@ -470,6 +467,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
   <script src="js/popper.min.js"></script> 
   <script src="js/bootstrap-4.4.1.js"></script> 
 </div>
+<script>
+  const profilePic = document.getElementById('profilePic');
+  let isDude = false;
+
+  profilePic.addEventListener('click', () => {
+    isDude = !isDude;
+    profilePic.src = isDude ? 'media/timasthedude3.png' : 'media/timgabaree_profile.png';
+  });
+</script>
 <div style="text-align: center; margin-top: 10px;"> 
   <script language="JavaScript" type="text/javascript">
 TrustLogo("https://timgabaree.com/media/sectigo_trust_seal_lg_140x54.png", "CL1", "none");
